# robot-simulation

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  README.txt  app.cpp  makefile
appRun/: ARobot.cpp  ARobot.h  CMakeLists.txt  RCRobot.cpp  RCRobot.h  app_proj.cpp  app_proj.h  app_proj.ui  backend.cpp  barier.h  barrier.cpp  barrier.h  barrierC.cpp  barrierC.h  editcontroler.cpp  editcontroler.h  gameButton.cpp  gameButton.h  global.h  main.cpp  robot.cpp  robot.h  window.cpp  window.h
build-appRun-Qt_6_6_1_for_macOS-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build-appRun-Qt_6_6_1_for_macOS-Debug/.qt/: QtDeploySupport.cmake
build-appRun-Qt_6_6_1_for_macOS-Debug/appRun.app/Contents/: Info.plist
build-appRun-Qt_6_6_1_for_macOS-Debug/appRun.app/Contents/MacOS/: appRun
build-appRun-Qt_6_6_1_for_macOS-Debug/appRun_autogen/: deps  mocs_compilation.cpp
build-appRun-Qt_6_6_1_for_macOS-Debug/appRun_autogen/EWIEGA46WW/: moc_app_proj.cpp  moc_app_proj.cpp.d  moc_barrier.cpp  moc_barrier.cpp.d  moc_gameButton.cpp  moc_gameButton.cpp.d  moc_window.cpp  moc_window.cpp.d
build-appRun-Qt_6_6_1_for_macOS-Debug/appRun_autogen/include/: ui_app_proj.h
examples/: game1.json  game2.json  game3.json  game4.json  game5.json  game6.json  game7.json  gameSmile.json
header/: ARobot.h  RCRobot.h  barrierC.h  editController.h  editcontroler.h  editcontroller.h  gameButton.h  global.h  robot.h  window.h
src/: ARobot.cpp  RCRobot.cpp  backend.cpp  barrierC.cpp  editController.cpp  editcontroler.cpp  editcontroller.cpp  gameButton.cpp  main.cpp  robot.cpp  window.cpp
